--- a/JatxMusic/MusicReceiverAndroid/res/values/strings.xml
+++ b/JatxMusic/MusicReceiverAndroid/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Music Receiver</string>
+    <string name="app_name">JatxMusic Receiver</string>
     
     <string name="string_start">Start</string>
     <string name="string_stop">Stop</string>
