--- a/JatxMusic/MusicTransmitterAndroid/res/values-ru/strings.xml
+++ b/JatxMusic/MusicTransmitterAndroid/res/values-ru/strings.xml
@@ -35,5 +35,11 @@
 	<string name="editor_number">Номер:</string>
 	<string name="editor_year">Год:</string>
 	<string name="editor_save">Сохранить</string>
+	
+	<string name="item_review_app">Оценить приложение</string>
+	<string name="item_receiver_android">Приемник для Android</string>
+	<string name="item_javafx_version">Версия для JavaFX</string>
+	<string name="item_source_code">Исходный код</string>
+	<string name="item_dev_site">Сайт разработчика</string>
 </resources>
 
