--- a/JatxMusic/MusicTransmitterAndroid/res/values/strings.xml
+++ b/JatxMusic/MusicTransmitterAndroid/res/values/strings.xml
@@ -39,6 +39,8 @@
 	<string name="item_review_app">Review App</string>
 	<string name="item_receiver_android">Receiver for Android</string>
 	<string name="item_javafx_version">Version for JavaFX</string>
+	<string name="item_receiver_javafx">Receiver for JavaFX</string>
+	<string name="item_transmitter_javafx">Transmitter for JavaFX</string>
 	<string name="item_source_code">Source Code</string>
 	<string name="item_dev_site">Developer Site</string>
 </resources>
